# os

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: os-cross-platform-ci.yml  os-strict-ci.yml
cmake/: vix_osConfig.cmake.in
include/vix/os/: Arch.hpp  CpuCount.hpp  CpuInfo.hpp  CurrentPid.hpp  CurrentUser.hpp  HomeDir.hpp  Hostname.hpp  IsAdmin.hpp  KernelVersion.hpp  MemoryInfo.hpp  Os.hpp  OsError.hpp  OsInfo.hpp  OsResult.hpp  PageSize.hpp  Platform.hpp  Sleep.hpp  TempDir.hpp  Uptime.hpp  UserInfo.hpp
src/: Arch.cpp  CpuCount.cpp  CurrentPid.cpp  CurrentUser.cpp  HomeDir.cpp  Hostname.cpp  IsAdmin.cpp  KernelVersion.cpp  PageSize.cpp  Platform.cpp  Sleep.cpp  TempDir.cpp  Uptime.cpp
test/: CMakeLists.txt  arch_test.cpp  cpu_count_test.cpp  current_pid_test.cpp  current_user_test.cpp  home_dir_test.cpp  hostname_test.cpp  is_admin_test.cpp  kernel_version_test.cpp  page_size_test.cpp  platform_test.cpp  sleep_test.cpp  temp_dir_test.cpp  uptime_test.cpp
